--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -4,12 +4,19 @@ RM = rm -f
 
 NAME = so_long
 
+MLX = libmlx.dylib
+MLX_DIR = ./mlx
+
+INC = -I./includes -I./mlx
+
 SRCS = 	srcs/get_next_line.c\
 		srcs/get_next_line_utils.c\
 		srcs/map_parsing.c\
 		srcs/main.c\
 		srcs/error.c\
 		srcs/utils.c\
+		srcs/event.c\
+		srcs/draw_map.c\
 		srcs/img.c
 
 %.o: %.c
@@ -18,7 +25,9 @@ SRCS = 	srcs/get_next_line.c\
 OBJS = $(SRCS:.c=.o)
 
 $(NAME) : $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -L. -lmlx -framework OpenGL -framework AppKit -o $@
+	$(MAKE) -C $(MLX_DIR)
+	cp $(MLX_DIR)/$(MLX) .
+	$(CC) $(CFLAGS) -g3 -fsanitize=address $(OBJS) -L. -lmlx -framework OpenGL -framework AppKit -o $@
 
 all: $(NAME)
 
@@ -26,8 +35,9 @@ clean:
 	$(RM) $(OBJS)
 	
 fclean: clean
-	$(RM) $(NAME)
+	@$(MAKE) -C $(MLX_DIR) clean
+	$(RM) $(NAME) $(MLX)
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re libmlx.dylib
