--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -11,7 +11,8 @@ INC = -I.
 
 SRCS = pipex.c\
 		preparation.c\
-		processes.c
+		processes.c\
+		utils.c
 
 %.o: %.c
 	$(CC) $(INC) -I$(LIBFT_DIR) -c $< -o $@
