--- a/philosophers/philo_one/Makefile
+++ b/philosophers/philo_one/Makefile
@@ -11,7 +11,7 @@
 # **************************************************************************** #
 
 CC = gcc
-CFLAGS = -Wall -Werror -Wextra
+CFLAGS = -Wall -Werror -Wextra -g3 -fsanitize=address
 RM = rm -f
 
 INCLUDE = -lpthread
