--- a/cpp_module/cpp04/ex01/Makefile
+++ b/cpp_module/cpp04/ex01/Makefile
@@ -1,9 +1,8 @@
 SRCS = main.cpp Animal.cpp Dog.cpp Cat.cpp Brain.cpp
-
 CPP = c++
-FLAG = -Werror -Wall -Wextra
+FLAG = -Werror -Wall -Wextra -std=c++98
 
-NAME = Brain
+NAME = Animal
 
 $(NAME): $(SRCS)
 	$(CPP) $(FLAG) -o $(NAME) $(SRCS)
