--- a/cpp_module/cpp05/ex01/Makefile
+++ b/cpp_module/cpp05/ex01/Makefile
@@ -1,9 +1,9 @@
-SRCS = main.cpp Bureaucrat.cpp
+SRCS = main.cpp Bureaucrat.cpp Form.cpp
 
 CPP = c++
-FLAG = -Werror -Wall -Wextra
+FLAG = -Werror -Wall -Wextra -std=c++98
 
-NAME = Bureaucrat
+NAME = Form
 
 $(NAME): $(SRCS)
 	$(CPP) $(FLAG) -o $(NAME) $(SRCS)
