cont 내 main 잘 됨. 테스터 추가

--- a/ft_containers/Makefile
+++ b/ft_containers/Makefile
@@ -3,7 +3,7 @@ SRCS = test_vector.cpp
 CPP = c++
 FLAG = -Werror -Wall -Wextra -std=c++98
 
-NAME = Vector
+NAME = FT_containers
 
 $(NAME): $(SRCS)
 	$(CPP) $(FLAG) -o $(NAME) $(SRCS)
