cont 테스터 수정

--- a/ft_containers/tester/Makefile
+++ b/ft_containers/tester/Makefile
@@ -12,9 +12,9 @@ $(NAME_STD): $(SRCS)
 	$(CPP) $(FLAG) -o $(NAME_STD) $(SRCS)
 
 all: $(NAME_FT) $(NAME_STD)
-	./$(NAME_FT) > ft.txt
-	./$(NAME_STD) > std.txt
-	diff ft.txt std.txt > diff.txt
+	@./$(NAME_FT) > ft.txt
+	@./$(NAME_STD) > std.txt
+	@-diff ft.txt std.txt > diff.txt
 
 clean:
 	rm -f $(NAME_FT) $(NAME_STD) *.txt
