--- a/inception/Makefile
+++ b/inception/Makefile
@@ -1,8 +1,9 @@
 all: 
-	docker-compose -f ./srcs/docker-compose.yml up $(c)
+	docker-compose -f ./srcs/docker-compose.yml up 
+
 
 down:
-	docker-compose -f ./srcs/docker-compose.yml down $(c)
+	docker-compose -f ./srcs/docker-compose.yml down
 
 re:
 	docker-compose -f srcs/docker-compose.yml up --build
